--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.1",
@@ -17,6 +18,7 @@
     "firebase": "^9.8.2",
     "framer-motion": "^6",
     "next": "12.1.6",
+    "patch-package": "^6.4.7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "recoil": "^0.7.3"
