--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "patch-package": "^6.4.7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-firebase-hooks": "^5.0.3",
     "recoil": "^0.7.3"
   },
   "devDependencies": {
