--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/open-sans": "^4.5.10",
     "firebase": "^9.8.2",
     "framer-motion": "^6",
+    "moment": "^2.29.4",
     "next": "12.1.6",
     "patch-package": "^6.4.7",
     "react": "18.1.0",
